# proxide

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md
.github/workflows/: ci.yml  release.yml
connector-rs/: Cargo.toml  README.md  connector.example.json
connector-rs/src/: main.rs
docs/: devspace-parity-roadmap.md  release.md
docs/articles/: proxide-any-agent-gpt-pro.md
scripts/: install-connector.sh  install-release.sh  package-connector.sh  verify-release.sh
skills/codex-web-bridge/: SKILL.md
skills/codex-web-bridge/references/: chatgpt-pro-mcp-setup.md  mcp-connector-mode.md  providers.md  response-capture.md
skills/codex-web-bridge/scripts/: bridge_handoff.py
