[package]
name = "codex-web-bridge-connector"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Rust MCP connector for codex-web-bridge"

[[bin]]
name = "codex-connector"
path = "src/main.rs"

[dependencies]
anyhow = "1"
axum = "0.8"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
subtle = "2"
tokio = { version = "1", features = ["full"] }
url = "2"
uuid = { version = "1", features = ["v4"] }
walkdir = "2"
